--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,8 +18,29 @@
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/nav_notifications"
         android:name="my.edu.tarc.quickhire.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_notifications" >
+        <action
+            android:id="@+id/action_navigation_notifications_to_nav_detailFragment"
+            app:destination="@id/nav_detailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/nav_editProfileFragment"
+        android:name="my.edu.tarc.quickhire.ui.Profile.EditProfileFragment"
+        android:label="EditProfileFragment" />
+    <fragment
+        android:id="@+id/nav_profileFragment"
+        android:name="my.edu.tarc.quickhire.ui.Profile.ProfileFragment"
+        android:label="ProfileFragment" >
+        <action
+            android:id="@+id/action_nav_profileFragment_to_nav_editProfileFragment"
+            app:destination="@id/nav_editProfileFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/nav_detailFragment"
+        android:name="my.edu.tarc.quickhire.ui.notifications.DetailFragment"
+        android:label="fragment_detail"
+        tools:layout="@layout/fragment_detail" />
 </navigation>
