--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,446 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:context=".ui.Profile.ProfileFragment">
-
-            <LinearLayout
-                android:id="@+id/layoutPhoto"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                 android:layout_marginStart="10dp"
-                >
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    app:cardCornerRadius="150dp"
-                    >
-
-                    <ImageView
-                        android:id="@+id/imageProfile"
-                        android:scaleType="fitCenter"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        app:srcCompat="@drawable/images"
-                        android:contentDescription="@string/des_imageview" />
-
-
-                </androidx.cardview.widget.CardView>
-
-
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:id="@+id/linearLayoutDetail"
-                android:layout_marginTop="-10dp"
-                android:layout_toEndOf="@id/layoutPhoto"
-                android:layout_below="@id/linearLayoutName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:cardCornerRadius="5dp"
-                    app:cardElevation="10dp"
-                    app:cardUseCompatPadding="true"
-                    tools:layout_editor_absoluteX="-16dp"
-                    tools:layout_editor_absoluteY="171dp">
-
-                    <TextView
-                        android:id="@+id/about"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/exp_about"
-                        android:textColor="@color/black"
-                        android:textSize="15sp"
-                        android:textStyle="bold" />
-
-
-                </androidx.cardview.widget.CardView>
-
-
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:id="@+id/linearLayoutName"
-                android:layout_toEndOf="@id/layoutPhoto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                android:orientation="vertical">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardCornerRadius="15dp"
-                    app:cardElevation="10dp"
-                    app:cardUseCompatPadding="true"
-                    tools:layout_editor_absoluteX="-16dp"
-                    tools:layout_editor_absoluteY="171dp">
-
-                    <ImageButton
-                        android:id="@+id/edit_detail"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_gravity="end"
-                        android:layout_marginEnd="20dp"
-                        android:background="#0000FFFF"
-                        android:scaleType="fitCenter"
-                        app:srcCompat="@drawable/baseline_edit_24"
-                        android:contentDescription="@string/des_image" />
-
-                    <TextView
-                        android:id="@+id/name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/exp_name"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        android:layout_marginStart="10dp"
-                        app:layout_constraintStart_toStartOf="parent" />
-
-                </androidx.cardview.widget.CardView>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/linearLayoutCurrentJob"
-                android:layout_below="@id/linearLayoutDetail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                android:orientation="vertical">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:cardCornerRadius="15dp"
-                    app:cardElevation="10dp"
-                    app:cardUseCompatPadding="true"
-                    tools:layout_editor_absoluteX="-16dp"
-                    tools:layout_editor_absoluteY="171dp">
-
-                    <TextView
-                        android:id="@+id/currentJobTag"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/current_job_tab"
-                        android:textStyle="bold"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginTop="20dp"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"/>
-
-                    <TextView
-                        android:id="@+id/currentJob"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/exp_job"
-                        android:textColor="@color/black"
-                        android:layout_marginTop="60dp"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginBottom="20dp"
-                        android:textSize="20sp" />
-
-                </androidx.cardview.widget.CardView>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/linearLayoutStated"
-                android:layout_below="@id/linearLayoutCurrentJob"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                android:orientation="vertical">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardCornerRadius="15dp"
-                    app:cardElevation="10dp"
-                    app:cardUseCompatPadding="true"
-                    tools:layout_editor_absoluteX="-16dp"
-                    tools:layout_editor_absoluteY="171dp">
-
-
-                    <TextView
-                        android:id="@+id/statedTag"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/stated_tag"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginStart="20dp"
-                        android:textStyle="bold"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        />
-
-                    <TextView
-                        android:id="@+id/stated"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/exp_stated"
-                        android:layout_marginTop="60dp"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginBottom="20dp"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        />
-
-                </androidx.cardview.widget.CardView>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/linearLayoutTimePrefer"
-                android:layout_below="@id/linearLayoutStated"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                android:orientation="vertical">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardCornerRadius="15dp"
-                    app:cardElevation="10dp"
-                    app:cardUseCompatPadding="true"
-                    tools:layout_editor_absoluteX="-16dp"
-                    tools:layout_editor_absoluteY="171dp">
-
-                    <TextView
-                        android:id="@+id/TimePreferTag"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/time_prefered_tag"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        android:textStyle="bold"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginStart="20dp"
-                        />
-
-                    <TextView
-                        android:id="@+id/TimePrefer"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/exp_time"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        android:layout_marginTop="60dp"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginBottom="20dp"
-                        />
-                </androidx.cardview.widget.CardView>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/linearLayoutContactInfo"
-                android:layout_below="@id/linearLayoutTimePrefer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                android:orientation="vertical">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardCornerRadius="15dp"
-                    app:cardElevation="10dp"
-                    app:cardUseCompatPadding="true"
-                    tools:layout_editor_absoluteX="-16dp"
-                    tools:layout_editor_absoluteY="171dp">
-
-                    <TextView
-                        android:id="@+id/ContactLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/contact_info_tag"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        android:textStyle="bold"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginStart="20dp"/>
-
-                    <TextView
-                        android:id="@+id/EmailTag"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/email_tag"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        android:layout_marginTop="60dp"
-                        android:layout_marginStart="20dp"/>
-
-                    <TextView
-                        android:id="@+id/Email"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/exp_email"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        android:layout_marginTop="60dp"
-                        android:layout_marginStart="150dp"/>
-
-                    <TextView
-                        android:id="@+id/ContactNumberTag"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/phone_tag"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        android:layout_marginTop="100dp"
-                        android:layout_marginStart="20dp"/>
-
-                    <TextView
-                        android:id="@+id/ContactNumber"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/exp_phone"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        android:layout_marginTop="100dp"
-                        android:layout_marginStart="150dp"
-                        android:layout_marginBottom="20dp"/>
-
-
-                </androidx.cardview.widget.CardView>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/linearLayoutEducation"
-                android:layout_below="@id/linearLayoutContactInfo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                android:orientation="vertical">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardCornerRadius="15dp"
-                    app:cardElevation="10dp"
-                    app:cardUseCompatPadding="true"
-                    tools:layout_editor_absoluteX="-16dp"
-                    tools:layout_editor_absoluteY="171dp">
-
-                    <TextView
-                        android:id="@+id/educationalTag"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/educational_tag"
-                        android:textColor="@color/black"
-                        android:textStyle="bold"
-                        android:textSize="20sp"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginStart="20dp"/>
-
-                    <TextView
-                        android:id="@+id/educational"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/exp_edu"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        android:layout_marginTop="60dp"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginBottom="20dp"/>
-
-
-                </androidx.cardview.widget.CardView>
-
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/linearLayoutSkill"
-                android:layout_below="@id/linearLayoutEducation"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                android:orientation="vertical">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardCornerRadius="15dp"
-                    app:cardElevation="10dp"
-                    app:cardUseCompatPadding="true"
-                    tools:layout_editor_absoluteX="-16dp"
-                    tools:layout_editor_absoluteY="171dp">
-
-                    <TextView
-                        android:id="@+id/skillTag"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/skill_tag"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        android:textStyle="bold"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginStart="20dp"/>
-
-                    <TextView
-                        android:id="@+id/skill"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/exp_skill"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        android:layout_marginTop="60dp"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginBottom="20dp"/>
-                </androidx.cardview.widget.CardView>
-
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/linearLayoutButton"
-                android:layout_below="@id/linearLayoutSkill"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                android:orientation="vertical">
-
-                <Button
-                    android:id="@+id/button_LogOut"
-                    style="?attr/materialButtonOutlinedStyle"
-                    android:layout_width="120dp"
-                    android:layout_height="50dp"
-                    android:layout_marginStart="150dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:text="@string/log_out"
-                    android:textColor="@color/red"
-                    app:cornerRadius="20dp"
-                    app:strokeColor="@color/red" />
-
-
-            </LinearLayout>
-
-        </RelativeLayout>
-
-    </ScrollView>
-</layout>
-
-
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ui.Profile.ProfileFragment">
+
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/hello_blank_fragment" />
+
+</FrameLayout>
