--- a/app/src/main/res/layout/fragment_notification_detail.xml
+++ b/app/src/main/res/layout/fragment_notification_detail.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.Profile.EditProfileFragment">
+    tools:context=".ui.notifications.NotificationDetailFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
