--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -16,31 +16,26 @@
         android:name="my.edu.tarc.quickhire.ui.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
-
     <fragment
-        android:id="@+id/nav_notifications"
-        android:name="my.edu.tarc.quickhire.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" >
-        <action
-            android:id="@+id/action_navigation_notifications_to_nav_detailFragment"
-            app:destination="@id/nav_detailFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/nav_editProfileFragment"
+        android:id="@+id/nav_editProfile"
         android:name="my.edu.tarc.quickhire.ui.Profile.EditProfileFragment"
-        android:label="EditProfileFragment" />
+        android:label="fragment_edit_profile"
+        tools:layout="@layout/fragment_edit_profile" />
+    <fragment
+        android:id="@+id/nav_notification"
+        android:name="my.edu.tarc.quickhire.ui.notifications.NotificationFragment"
+        android:label="fragment_notification"
+        tools:layout="@layout/fragment_notification" />
+    <fragment
+        android:id="@+id/nav_notificationDetail"
+        android:name="my.edu.tarc.quickhire.ui.notifications.NotificationDetailFragment"
+        android:label="fragment_notification_detail"
+        tools:layout="@layout/fragment_notification_detail" />
     <fragment
         android:id="@+id/nav_profileFragment"
         android:name="my.edu.tarc.quickhire.ui.Profile.ProfileFragment"
-        android:label="ProfileFragment" >
-        <action
-            android:id="@+id/action_nav_profileFragment_to_nav_editProfileFragment"
-            app:destination="@id/nav_editProfileFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/nav_detailFragment"
-        android:name="my.edu.tarc.quickhire.ui.notifications.DetailFragment"
-        android:label="fragment_detail"
-        tools:layout="@layout/fragment_detail" />
+        android:label="fragment_profile"
+        tools:layout="@layout/fragment_profile" />
+
+
 </navigation>
