Done Edit Profile

--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -45,7 +45,7 @@
                         android:scaleType="fitCenter"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        app:srcCompat="@drawable/images"
+                        app:srcCompat="@drawable/profileunknown"
                         android:contentDescription="@string/des_imageview" />
 
 
@@ -87,6 +87,7 @@
                 android:orientation="horizontal">
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/EditName"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -201,7 +202,7 @@
                         android:layout_width="350dp"
                         android:layout_height="wrap_content"
                         android:drawableStart="@drawable/baseline_work_24"
-                        android:inputType="number" />
+                       />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -352,6 +353,7 @@
                 android:layout_below="@+id/headline"
                 android:layout_marginStart="75dp"
                 android:layout_marginTop="41dp"
+                android:layout_marginBottom="70dp"
                 android:text="@string/done"
                 app:cornerRadius="20dp"
                 app:strokeColor="@color/green"
@@ -366,6 +368,7 @@
                 android:layout_below="@+id/headline"
                 android:layout_marginStart="235dp"
                 android:layout_marginTop="41dp"
+                android:layout_marginBottom="70dp"
                 android:text="@string/cancel"
                 app:cornerRadius="20dp"
                 app:strokeColor="@color/red"
