--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/title_home" />
 
+    <item
+        android:id="@+id/navigation_dashboard"
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:title="@string/title_dashboard" />
     <item
         android:id="@+id/nav_notification"
         android:icon="@drawable/ic_notifications_black_24dp"
@@ -27,9 +25,9 @@
         android:icon="@drawable/baseline_search_24"
         android:title="@string/title_search" />
 
-    <item
-        android:id="@+id/nav_post"
-        android:icon="@drawable/baseline_add_circle_outline_24"
-        android:title="@string/title_post" />
+<!--    <item-->
+<!--        android:id="@+id/nav_post"-->
+<!--        android:icon="@drawable/baseline_add_circle_outline_24"-->
+<!--        android:title="@string/title_post" />-->
 
 </menu>
