--- a/app/src/main/res/layout/fragment_employer_home.xml
+++ b/app/src/main/res/layout/fragment_employer_home.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:focusable="auto"
     android:paddingBottom="55dp"
-    tools:context=".ui.home.HomeFragment">
+    tools:context=".ui.home.EmployerHomeFragment">
 
     <TextView
         android:id="@+id/text_home"
